# RAG

./: .gitattributes  REFERENCES.md  data_analysis.ipynb  data_processing.ipynb  label_result.json  main.py  params_keywords.json  patent_search_results.txt  patent_triz_labeler.py  patent_triz_results.json  pyproject.toml
data/: patent_samples.json  patent_samples_raw.csv
data/keywords/: keywords.csv  params_keywords.yaml  triz_params.yaml
flowchart/: TRIZ_chart.drawio  framwork.drawio  framwork.drawio.1.crswap
ppt/: 口試簡報.pptx
references/: ~$TRIZ之專利文本知識表達與特徵擷取研究(0216).docx  ~$專利搜尋與文字探勘來探討產品設計之演化趨勢模式_DOI版.docx  ~$自然語言處理技術探討產品設計與專利推薦之研究(修正版).docx  應用自然語言處理技術探討產品設計與專利推薦之研究(修正版).docx  運用專利搜尋與文字探勘來探討產品設計之演化趨勢模式_DOI版.docx
result/: patent_search_results-1.txt  patent_search_results-QA1.txt  patent_search_results-QA2.txt  patent_search_results-QA3.txt  patent_search_results-QA4.txt  patent_search_results-QA5.txt  patent_search_results-QA6.txt  patent_search_results-QB1.txt  patent_search_results-QB2.txt  patent_search_results-QB3.txt  patent_search_results-QB4.txt  patent_search_results-QB5.txt  patent_search_results-QB6.txt  patent_search_results_abstract.txt  patent_search_results_claims.txt  patent_search_results_params-1.txt
results/labeled_results/: method_results_1.json  method_results_2.json  method_results_3.json  method_results_4.json  method_results_5.json  section_results_1.json  section_results_3.json  section_results_4.json  section_results_5.json
results/rag_results/w_labeled/: Design_a_smartphone_with_large_display.txt  Develop_a_bladeless_electric_fan.txt  (+5 more)
thesis/: ~$ TRIZ 標記專利優化資料庫之研究(new).docx  ~$ TRIZ 標記專利優化資料庫之研究.docx  ~$TRIZ之專利文本知識表達與特徵擷取研究(0216).docx  基於 TRIZ 標記專利優化資料庫之研究(new) (修復).docx  基於 TRIZ 標記專利優化資料庫之研究(new).docx
(+7 files in other folders)
