[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-text-splitters>=0.3.8",
    "notebook>=7.4.4",
    "polars>=1.31.0",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[tool.uv.sources]
spinnaker-python = { url = "https://github.com/john-juahua/RoadEnv/raw/refs/heads/master/spinnaker_python-4.0.0.116-cp310-cp310-win_amd64.whl" }
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
